<?xml version="1.0" encoding="utf-8"?>
<resources>
<string name="arg_res_0x7f110107">Join Premium</string>
<string name="arg_res_0x7f11028e">Weekly</string>
<string name="arg_res_0x7f110104">Monthly</string>
<string name="arg_res_0x7f110048">Cancel anytime</string>
<string name="arg_res_0x7f11028f">1. The payment will be charged to your Google Play account when the trial ends or upon purchase if you choose not to start a trial.

2. The subscription will automatically renew unless canceled at least 24 hours before the trial or the current period ends.

3. You can cancel auto-renewal at any time, but refunds will not be issued during an active subscription.

4. You can manage and cancel your subscription through the settings in the Google Play Store.</string>
<string name="arg_res_0x7f1101a0">Tap to enter the homepage</string>
<string name="arg_res_0x7f110186">No Payment Now</string>
<string name="arg_res_0x7f11006a">Completed!</string>
<string name="arg_res_0x7f110185">No junk found in your phone!</string>
<string name="arg_res_0x7f110248">Removed</string>
<string name="arg_res_0x7f110085">Duplicate photos</string>
<string name="arg_res_0x7f11022d">Space saved</string>
<string name="arg_res_0x7f1101d7">Contacts recovery</string>
<string name="arg_res_0x7f1101e0">Deleted contacts</string>
<string name="arg_res_0x7f1101ea">Find and recover deleted contacts</string>
<string name="arg_res_0x7f1101d5">Contacts backup</string>
<string name="arg_res_0x7f110232">View all contacts and back them up</string>
<string name="arg_res_0x7f110275">Skip</string>
<string name="arg_res_0x7f110265">Screenshots</string>
<string name="arg_res_0x7f1101a7">Photos</string>
<string name="arg_res_0x7f1101df">Deleted successfully!</string>
<string name="arg_res_0x7f110035">Are you satisfied with %s?</string>
<string name="arg_res_0x7f11018c">Not really</string>
<string name="arg_res_0x7f1100f0">Good</string>
<string name="arg_res_0x7f1100d6">Feedback or suggestion</string>
<string name="arg_res_0x7f110042">Continue</string>
<string name="arg_res_0x7f1100ea">Junk Remover</string>
<string name="arg_res_0x7f110246">Remove Junk</string>
<string name="arg_res_0x7f110084">Duplicate</string>
<string name="arg_res_0x7f1101f9">Large videos</string>
<string name="arg_res_0x7f110074">Deleting...</string>
<string name="arg_res_0x7f110081">It may take a few seconds to delete the file(s), please wait…</string>
<string name="arg_res_0x7f1101bf">Recovering…</string>
<string name="arg_res_0x7f1101c0">It may take a few seconds to recover the file(s), please wait…</string>
<string name="arg_res_0x7f110281">Special Offer!</string>
<string name="arg_res_0x7f110177">New Users Only!</string>
<string name="arg_res_0x7f11013f">Min</string>
<string name="arg_res_0x7f110268">Sec</string>
<string name="arg_res_0x7f11004a">cs</string>
<string name="arg_res_0x7f11010d">Loading…</string>
<string name="arg_res_0x7f11006f">Date</string>
<string name="arg_res_0x7f110100">Size</string>
<string name="arg_res_0x7f1101fa">Layout</string>
<string name="arg_res_0x7f110276">Smart choice</string>
<string name="arg_res_0x7f11003b">Auto identify the best among similar photos</string>
<string name="arg_res_0x7f11026a">Select all</string>
<string name="arg_res_0x7f110266">Search…</string>
<string name="arg_res_0x7f11023d">Message Recovery Limits</string>
<string name="arg_res_0x7f11023c">Here are the situations in which we cannot recover deleted messages:</string>
<string name="arg_res_0x7f110238">If you have muted the chat or disabled notification alerts.</string>
<string name="arg_res_0x7f110239">If the message was deleted before downloading %s.</string>
<string name="arg_res_0x7f11023a">If you were viewing the message in WhatsApp when it was deleted.</string>
<string name="arg_res_0x7f11023b">If the deleted message has not been backed up due to poor network.</string>
<string name="arg_res_0x7f1100f7">OK</string>
<string name="arg_res_0x7f110086">Duration</string>
<string name="arg_res_0x7f1100fa">Thumbnails refer to photos below 256 pixels.</string>
<string name="arg_res_0x7f11010e">Loading, please wait…</string>
<string name="arg_res_0x7f110051">Finished!</string>
<string name="arg_res_0x7f110286">Start %s-day free trial</string>
<string name="arg_res_0x7f110350">%s-day free trial</string>
<string name="arg_res_0x7f110284">Start</string>
<string name="arg_res_0x7f110285">Start date</string>
<string name="arg_res_0x7f110088">End date</string>
<string name="arg_res_0x7f110228">Select language</string>
<string name="arg_res_0x7f110000">Cancel</string>
<string name="arg_res_0x7f11022f">Recovered successfully!</string>
<string name="arg_res_0x7f110348">View</string>
<string name="arg_res_0x7f110187">No photos found</string>
<string name="arg_res_0x7f110201">Next</string>
<string name="arg_res_0x7f11028a">Still Thinking?</string>
<string name="arg_res_0x7f110292">Your Surprise Awaits!</string>
<string name="arg_res_0x7f11001c">%s Days</string>
<string name="arg_res_0x7f1100e8">Free Trial</string>
<string name="arg_res_0x7f1100e2">File Recovery</string>
<string name="arg_res_0x7f1101af">PRO</string>
<string name="arg_res_0x7f1101a6">Photo</string>
<string name="arg_res_0x7f110216">Quick recovery</string>
<string name="arg_res_0x7f11013e">Message</string>
<string name="arg_res_0x7f110237">WA recovery</string>
<string name="arg_res_0x7f11016b">Video</string>
<string name="arg_res_0x7f110038">Audio</string>
<string name="arg_res_0x7f1101e4">Document</string>
<string name="arg_res_0x7f110103">Contacts</string>
<string name="arg_res_0x7f110226">Screenshot remover</string>
<string name="arg_res_0x7f1101bd">Recovered</string>
<string name="arg_res_0x7f110289">Click to confirm</string>
<string name="arg_res_0x7f110222">Removing…</string>
<string name="arg_res_0x7f110128">Settings</string>
<string name="arg_res_0x7f1101be">Recovered files</string>
<string name="arg_res_0x7f110357">Cache Whitelist</string>
<string name="arg_res_0x7f110356">For App Cache in Junk Remover</string>
<string name="arg_res_0x7f110109">Language</string>
<string name="arg_res_0x7f110293">System</string>
<string name="arg_res_0x7f1101d8">Dark mode</string>
<string name="arg_res_0x7f1101b5">Rate us</string>
<string name="arg_res_0x7f11026e">Share App</string>
<string name="arg_res_0x7f11029e">Terms of Use</string>
<string name="arg_res_0x7f1101ae">Privacy Policy</string>
<string name="arg_res_0x7f11003d">Manage subscriptions</string>
<string name="arg_res_0x7f110027">New version detected</string>
<string name="arg_res_0x7f11036c">You might like</string>
<string name="arg_res_0x7f110247">Remove now</string>
<string name="arg_res_0x7f1101aa">Photo recovery</string>
<string name="arg_res_0x7f110259">Scan all files</string>
<string name="arg_res_0x7f11025c">Scan deleted files</string>
<string name="arg_res_0x7f110045">Preparing…</string>
<string name="arg_res_0x7f110211">Only show deleted</string>
<string name="app_name">Config</string>




























































<string name="arg_res_0x7f11003a">Audio recovery</string>






























































































































</resources>
