<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/color_100_FBFAF8_black"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.core.widget.NestedScrollView
        android:id="@+id/wa_limitation_nsc_top"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/wa_limitation_tv_next"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_18"
            android:paddingStart="@dimen/dp_28"
            android:paddingEnd="@dimen/dp_28">
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_gravity="center_horizontal"
                android:layout_width="@dimen/dp_204"
                android:layout_height="@dimen/dp_190"
                android:adjustViewBounds="true"
                app:srcCompat="@drawable/ic_limitation_top_hint"/>
            <TextView
                android:textSize="@dimen/sp_22"
                android:textColor="@color/color_100_black_white"
                android:gravity="start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_20"
                android:text="@string/arg_res_0x7f11023d"
                android:fontFamily="@font/roboto_black"
                android:textAlignment="viewStart"/>
            <TextView
                android:textSize="@dimen/sp_16"
                android:textColor="@color/color_100_black_white"
                android:gravity="start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_9"
                android:text="@string/arg_res_0x7f11023c"
                android:fontFamily="@font/roboto_regular"
                android:textAlignment="viewStart"/>
            <TextView
                android:textSize="@dimen/sp_16"
                android:textColor="@color/color_80_black_60_white"
                android:gravity="start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_50"
                android:text="@string/arg_res_0x7f110238"
                android:drawablePadding="@dimen/dp_12"
                android:fontFamily="@font/roboto_regular"
                android:textAlignment="viewStart"
                app:drawableStartCompat="@drawable/ic_message_notification"/>
            <TextView
                android:textSize="@dimen/sp_16"
                android:textColor="@color/color_80_black_60_white"
                android:gravity="start"
                android:id="@+id/wa_limitation_tv_limits2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_16"
                android:text="@string/arg_res_0x7f110239"
                android:drawablePadding="@dimen/dp_12"
                android:fontFamily="@font/roboto_regular"
                android:textAlignment="viewStart"
                app:drawableStartCompat="@drawable/ic_message_delete"/>
            <TextView
                android:textSize="@dimen/sp_16"
                android:textColor="@color/color_80_black_60_white"
                android:gravity="start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_16"
                android:text="@string/arg_res_0x7f11023a"
                android:drawablePadding="@dimen/dp_12"
                android:fontFamily="@font/roboto_regular"
                android:textAlignment="viewStart"
                app:drawableStartCompat="@drawable/ic_message_message"/>
            <TextView
                android:textSize="@dimen/sp_16"
                android:textColor="@color/color_80_black_60_white"
                android:gravity="start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_16"
                android:text="@string/arg_res_0x7f11023b"
                android:drawablePadding="@dimen/dp_12"
                android:fontFamily="@font/roboto_regular"
                android:textAlignment="viewStart"
                app:drawableStartCompat="@drawable/ic_message_wifi"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    <TextView
        android:textSize="@dimen/sp_18"
        android:textColor="@color/color_100_ffffff"
        android:gravity="center"
        android:id="@+id/wa_limitation_tv_next"
        android:background="@drawable/bg_00a884y_radio_27"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginBottom="@dimen/dp_40"
        android:text="@string/arg_res_0x7f1100f7"
        android:fontFamily="@font/roboto_black"
        android:layout_marginStart="@dimen/dp_23"
        android:layout_marginEnd="@dimen/dp_23"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/wa_limitation_iv_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_14"
        android:tint="@color/color_50_black_white"
        android:layout_marginEnd="@dimen/dp_22"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_close_dialog"/>
</androidx.constraintlayout.widget.ConstraintLayout>
