<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/color_97_000000"
    android:focusable="true"
    android:clickable="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/long_stay_retain_anim"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="375:667"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4"
        app:lottie_autoPlay="false"
        app:lottie_rawRes="@raw/billing_long_stay_gift_box"/>
    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:id="@+id/scene1_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/long_stay_retain_anim"
        app:layout_constraintEnd_toEndOf="@+id/long_stay_retain_anim"
        app:layout_constraintStart_toStartOf="@+id/long_stay_retain_anim"
        app:layout_constraintTop_toTopOf="@+id/long_stay_retain_anim">
        <filerecovery.photosrecovery.allrecovery.view.ItalicTextView
            android:textSize="@dimen/sp_40"
            android:textStyle="italic"
            android:textColor="@color/color_100_FFE9B3"
            android:gravity="center"
            android:id="@+id/scene1_title_tv"
            android:paddingLeft="@dimen/dp_5"
            android:paddingRight="@dimen/dp_5"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_5"
            android:layout_marginRight="@dimen/dp_5"
            android:layout_marginBottom="@dimen/dp_46"
            android:text="@string/arg_res_0x7f11028a"
            android:layout_marginHorizontal="@dimen/dp_5"
            android:paddingHorizontal="@dimen/dp_5"
            style="@style/FontBlack"/>
        <filerecovery.photosrecovery.allrecovery.view.ItalicTextView
            android:textSize="@dimen/sp_40"
            android:textStyle="italic"
            android:textColor="#ffe399"
            android:gravity="center"
            android:id="@+id/scene1_subtitle_tv"
            android:paddingLeft="@dimen/dp_5"
            android:paddingRight="@dimen/dp_5"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_5"
            android:layout_marginRight="@dimen/dp_5"
            android:text="@string/arg_res_0x7f110292"
            android:layout_marginHorizontal="@dimen/dp_5"
            android:paddingHorizontal="@dimen/dp_5"
            style="@style/FontBlack"/>
    </LinearLayout>
    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:id="@+id/scene3_layout"
        android:clipChildren="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        app:layout_constraintBottom_toBottomOf="@+id/long_stay_retain_anim"
        app:layout_constraintEnd_toEndOf="@+id/long_stay_retain_anim"
        app:layout_constraintStart_toStartOf="@+id/long_stay_retain_anim"
        app:layout_constraintTop_toTopOf="@+id/long_stay_retain_anim">
        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:id="@+id/scene3_top_layout"
            android:visibility="gone"
            android:clipChildren="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <filerecovery.photosrecovery.allrecovery.view.ItalicTextView
                android:textSize="@dimen/sp_40"
                android:textStyle="italic"
                android:textColor="@color/color_100_ffffff"
                android:gravity="center"
                android:id="@+id/scene3_title_tv"
                android:paddingLeft="@dimen/dp_5"
                android:paddingRight="@dimen/dp_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_5"
                android:layout_marginRight="@dimen/dp_5"
                android:layout_marginBottom="@dimen/dp_7"
                android:text="@string/arg_res_0x7f110281"
                android:layout_marginHorizontal="@dimen/dp_5"
                android:paddingHorizontal="@dimen/dp_5"
                app:textAllCaps="true"
                style="@style/FontBlack"/>
            <filerecovery.photosrecovery.allrecovery.view.ItalicTextView
                android:textSize="@dimen/sp_28"
                android:textStyle="italic"
                android:textColor="#ffe399"
                android:gravity="center"
                android:id="@+id/scene3_subtitle_tv"
                android:paddingLeft="@dimen/dp_5"
                android:paddingRight="@dimen/dp_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_5"
                android:layout_marginRight="@dimen/dp_5"
                android:layout_marginBottom="-10dp"
                android:text="@string/arg_res_0x7f110177"
                android:layout_marginHorizontal="@dimen/dp_5"
                android:paddingHorizontal="@dimen/dp_5"
                style="@style/FontSemiBold"/>
        </LinearLayout>
        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:id="@+id/scene3_bottom_layout"
            android:visibility="gone"
            android:clipChildren="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="horizontal"
                android:clipChildren="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <filerecovery.photosrecovery.allrecovery.view.ItalicTextView
                    android:textSize="140sp"
                    android:textColor="#ffe399"
                    android:gravity="center"
                    android:id="@+id/scene3_center1_tv"
                    android:paddingLeft="@dimen/dp_4"
                    android:paddingRight="@dimen/dp_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/arg_res_0x7f11001c"
                    android:includeFontPadding="false"
                    android:fontFamily="@font/bodonimoda_semibold_italic"
                    android:paddingHorizontal="@dimen/dp_4"/>
            </LinearLayout>
            <filerecovery.photosrecovery.allrecovery.view.ItalicTextView
                android:textSize="@dimen/sp_36"
                android:textStyle="italic"
                android:textColor="#ffe399"
                android:gravity="center"
                android:id="@+id/scene3_bottom_tv"
                android:paddingLeft="@dimen/dp_5"
                android:paddingRight="@dimen/dp_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_5"
                android:layout_marginTop="-20dp"
                android:layout_marginRight="@dimen/dp_5"
                android:text="@string/arg_res_0x7f1100e8"
                android:layout_marginHorizontal="@dimen/dp_5"
                android:paddingHorizontal="@dimen/dp_5"
                style="@style/FontSemiBold"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
