<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/mainColorPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:orientation="horizontal"
        android:background="@drawable/bg_white_262626_bottom_radio_20"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_80">
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_back"
            android:padding="@dimen/dp_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_9"
            android:layout_marginStart="@dimen/dp_6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_topbar_back"/>
        <TextView
            android:textSize="@dimen/sp_20"
            android:textColor="@color/color_100_black_white"
            android:id="@+id/phone_cleaner_tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/arg_res_0x7f1100ea"
            android:fontFamily="@font/roboto_bold"
            android:layout_marginEnd="@dimen/dp_14"
            app:layout_constraintBottom_toBottomOf="@+id/iv_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_back"
            app:layout_constraintTop_toTopOf="@+id/iv_back"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <LinearLayout
            android:orientation="vertical"
            android:paddingTop="@dimen/dp_14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/dp_18"
            android:paddingEnd="@dimen/dp_18">
            <LinearLayout
                android:orientation="vertical"
                android:id="@+id/ll_deep_clean_container"
                android:background="@drawable/bg_white_181818_radio_20"
                android:paddingTop="@dimen/dp_22"
                android:paddingBottom="@dimen/dp_18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/dp_22"
                android:paddingEnd="@dimen/dp_24">
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/dp_30"
                    android:layout_height="@dimen/dp_30"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/ic_home_deep_clean"/>
                <TextView
                    android:textSize="@dimen/sp_18"
                    android:textColor="@color/color_100_black_white"
                    android:id="@+id/tv_remove_junk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_6"
                    android:layout_marginBottom="@dimen/dp_4"
                    android:text="@string/arg_res_0x7f110246"
                    android:includeFontPadding="false"
                    android:fontFamily="@font/roboto_bold"/>
                <TextView
                    android:textSize="@dimen/sp_14"
                    android:textColor="@color/color_78879d_white60"
                    android:gravity="start"
                    android:id="@+id/tv_clean_size"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
                    android:fontFamily="@font/roboto_medium"
                    android:textAlignment="viewStart"/>
                <com.airbnb.lottie.LottieAnimationView
                    android:layout_gravity="center_vertical"
                    android:id="@+id/progress_clean_loading"
                    android:visibility="gone"
                    android:layout_width="@dimen/dp_24"
                    android:layout_height="@dimen/dp_24"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_scanning_current_count"
                    app:lottie_autoPlay="true"
                    app:lottie_rawRes="@raw/common_progressbar_small"
                    app:lottie_repeatCount="-1"/>
            </LinearLayout>
            <filerecovery.photosrecovery.allrecovery.view.CleanerItemView
                android:gravity="center_vertical"
                android:id="@+id/cleaner_screenshots"
                android:background="@drawable/bg_white_181818_radio_35"
                android:paddingTop="@dimen/dp_16"
                android:paddingBottom="@dimen/dp_16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_14"
                android:paddingStart="@dimen/dp_22"
                android:paddingEnd="@dimen/dp_24"
                app:cleanerFileSize="22M"
                app:cleanerIcon="@drawable/ic_home_screenshots"
                app:cleanerShowProgress="false"
                app:cleanerTitle="@string/arg_res_0x7f110265"/>
            <filerecovery.photosrecovery.allrecovery.view.CleanerItemView
                android:gravity="center_vertical"
                android:id="@+id/cleaner_duplicate"
                android:background="@drawable/bg_white_181818_radio_35"
                android:paddingTop="@dimen/dp_16"
                android:paddingBottom="@dimen/dp_16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_14"
                android:paddingStart="@dimen/dp_22"
                android:paddingEnd="@dimen/dp_24"
                app:cleanerFileSize="22M"
                app:cleanerIcon="@drawable/ic_home_duplicated"
                app:cleanerShowProgress="false"
                app:cleanerTitle="@string/arg_res_0x7f110084"/>
            <filerecovery.photosrecovery.allrecovery.view.CleanerItemView
                android:gravity="center_vertical"
                android:id="@+id/cleaner_big_videos"
                android:background="@drawable/bg_white_181818_radio_35"
                android:paddingTop="@dimen/dp_16"
                android:paddingBottom="@dimen/dp_16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_14"
                android:paddingStart="@dimen/dp_22"
                android:paddingEnd="@dimen/dp_24"
                app:cleanerFileSize="22M"
                app:cleanerIcon="@drawable/ic_home_big_videos"
                app:cleanerShowProgress="true"
                app:cleanerTitle="@string/arg_res_0x7f1101f9"/>
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/ll_clean_ad_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"/>
</LinearLayout>
