<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/mainColorPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:id="@+id/title_bar_ll_root"
        android:background="@drawable/bg_white_262626_bottom_radio_20"
        android:paddingTop="@dimen/dp_11"
        android:paddingBottom="@dimen/dp_30"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_80"
        android:paddingStart="@dimen/dp_8"
        android:paddingEnd="@dimen/dp_14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/title_bar_iv_back"
            android:padding="@dimen/dp_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_topbar_back"/>
        <TextView
            android:textSize="@dimen/sp_20"
            android:textColor="@color/color_100_black_white"
            android:gravity="start"
            android:id="@+id/title_bar_tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/arg_res_0x7f1101aa"
            android:maxLines="1"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_bold"
            android:textAlignment="viewStart"
            android:layout_marginStart="@dimen/dp_12"
            app:autoSizeMaxTextSize="@dimen/sp_20"
            app:autoSizeMinTextSize="@dimen/sp_10"
            app:autoSizeTextType="uniform"
            app:layout_constraintBottom_toBottomOf="@+id/title_bar_iv_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/title_bar_iv_back"
            app:layout_constraintTop_toTopOf="@+id/title_bar_iv_back"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <TextView
        android:textSize="@dimen/sp_18"
        android:textColor="@color/color_100_black_white"
        android:gravity="start|center_vertical"
        android:id="@+id/pre_scan_tv_all_files"
        android:background="@drawable/bg_white_262626_radio_20"
        android:padding="@dimen/dp_20"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_14"
        android:text="@string/arg_res_0x7f110259"
        android:drawablePadding="@dimen/dp_14"
        android:fontFamily="@font/roboto_bold"
        android:textAlignment="viewStart"
        android:layout_marginStart="@dimen/dp_18"
        android:layout_marginEnd="@dimen/dp_18"
        app:drawableStartCompat="@drawable/ic_pre_scan_all_files"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_bar_ll_root"/>
    <TextView
        android:textSize="@dimen/sp_18"
        android:textColor="@color/color_100_black_white"
        android:gravity="start|center_vertical"
        android:id="@+id/pre_scan_tv_deleted_files"
        android:background="@drawable/bg_white_262626_radio_20"
        android:padding="@dimen/dp_20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_14"
        android:text="@string/arg_res_0x7f11025c"
        android:drawablePadding="@dimen/dp_14"
        android:fontFamily="@font/roboto_bold"
        android:textAlignment="viewStart"
        android:layout_marginStart="@dimen/dp_18"
        android:layout_marginEnd="@dimen/dp_18"
        app:drawableStartCompat="@drawable/ic_pre_scan_delete_files"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pre_scan_tv_all_files"/>
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/pre_scan_lottie_anim_loading"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_82"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_bar_ll_root"
        app:layout_constraintVertical_bias="0.3"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/pre_scan_filter_loading"/>
    <TextView
        android:textSize="@dimen/sp_18"
        android:textColor="@color/color_black_100_white_60"
        android:gravity="center"
        android:id="@+id/pre_scan_tv_preparing"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_24"
        android:text="@string/arg_res_0x7f110045"
        android:fontFamily="@font/roboto_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pre_scan_lottie_anim_loading"/>
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/pre_scan_ll_ad_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
